Tela home pronta, iniciando tela relatórios

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -8,7 +8,9 @@
                     <img src="/assets/img/logotdm.png" alt="Logo">
                   
 
-                    <p-menu [style]="{'width': '100%', 'border': 'none', 'margin': 'auto', 'margin-top': '1rem'}" [model]="items"></p-menu>
+                    <p-menu [style]="{'width': '100%', 'border': 'none', 'margin': 'auto', 'margin-top': '1rem'}"  [model]="items">
+                        
+                    </p-menu>
 
                     
                 </p-sidebar>
